@@ -35,12 +35,11 @@ import org.openqa.selenium.firefox.FirefoxOptions;
 import org.openqa.selenium.ie.InternetExplorerDriver;
 import org.openqa.selenium.ie.InternetExplorerOptions;
 import org.openqa.selenium.opera.OperaOptions;
-import org.openqa.selenium.remote.CapabilityType;
 import org.openqa.selenium.remote.CommandInfo;
 import org.openqa.selenium.remote.DesiredCapabilities;
 import org.openqa.selenium.remote.HttpCommandExecutor;
 import org.openqa.selenium.remote.http.ClientConfig;
-import org.openqa.selenium.remote.http.HttpClient.Factory;
+import org.openqa.selenium.remote.http.HttpClient;
 import org.openqa.selenium.safari.SafariOptions;
 
 import com.google.gson.Gson;
@@ -56,6 +55,7 @@ import com.qmetry.qaf.automation.ui.selenium.webdriver.SeleniumDriverFactory;
 import com.qmetry.qaf.automation.ui.webdriver.QAFExtendedWebDriver;
 import com.qmetry.qaf.automation.ui.webdriver.QAFWebDriverCommandListener;
 import com.qmetry.qaf.automation.util.StringUtil;
+import com.quantum.utils.QuantumPatch;
 
 import io.appium.java_client.remote.AppiumCommandExecutor;
 import io.github.bonigarcia.wdm.WebDriverManager;
@@ -78,7 +78,6 @@ public class UiDriverFactory implements DriverFactory<UiDriver> {
 			try {
 				return getDriver(cmdLogger, stb);
 			} catch (Exception e) {
-				// TODO Auto-generated catch block
 				e.printStackTrace();
 			}
 		}
@@ -178,7 +177,9 @@ public class UiDriverFactory implements DriverFactory<UiDriver> {
 
 		for (String listenr : clistners) {
 			try {
-				QAFWebDriverCommandListener cls = (QAFWebDriverCommandListener) Class.forName(listenr).newInstance();
+				QAFWebDriverCommandListener cls = (QAFWebDriverCommandListener) Class.forName(listenr).getConstructor().newInstance();
+						
+//						newInstance();
 				listners.add(cls);
 			} catch (Exception e) {
 				logger.error("Unable to register listener class " + listenr, e);
@@ -187,7 +188,8 @@ public class UiDriverFactory implements DriverFactory<UiDriver> {
 		clistners = ConfigurationManager.getBundle().getStringArray(ApplicationProperties.QAF_LISTENERS.key);
 		for (String listener : clistners) {
 			try {
-				QAFListener cls = (QAFListener) Class.forName(listener).newInstance();
+				QAFListener cls = (QAFListener) Class.forName(listener).getConstructor().newInstance();
+//						.newInstance();
 				if (QAFWebDriverCommandListener.class.isAssignableFrom(cls.getClass()))
 					listners.add((QAFWebDriverCommandListener) cls);
 			} catch (Exception e) {
@@ -234,16 +236,30 @@ public class UiDriverFactory implements DriverFactory<UiDriver> {
 			Constructor<? extends WebDriver> constructor = of.getConstructor(URL.class, Capabilities.class);
 			return constructor.newInstance(new URL(urlStr), capabilities);
 		} catch (Exception ex) {
+			
+			logger.error(ex.getMessage());
 			try {
+				
+				logger.info("Retrying the Driver initialization - 1");
 				Constructor<? extends WebDriver> constructor = of.getConstructor(Capabilities.class);
 				return constructor.newInstance(capabilities);
 			} catch (Exception e) {
+				
+				logger.error(e.getMessage());
+				
 				if (e.getCause() != null && e.getCause() instanceof WebDriverException) {
 					throw (WebDriverException) e.getCause();
 				}
+				
+				logger.info("Retrying the Driver initialization - 2");
+				
 				try {
-					return of.newInstance();
+					return of.getConstructor().newInstance();
+//							.newInstance();
 				} catch (Exception e1) {
+					
+					logger.error(e1.getMessage());
+					logger.info("Retrying the Driver initialization - 3");
 					try {
 						// give it another try
 						Constructor<? extends WebDriver> constructor = of.getConstructor(URL.class, Capabilities.class);
@@ -295,13 +311,27 @@ public class UiDriverFactory implements DriverFactory<UiDriver> {
 
 		private DesiredCapabilities desiredCapabilities;
 
-		private Class<? extends WebDriver> driverCls = null;
+		
+		// Replaced with getDriverCls and getDriverCls method call to fix Parallel execution issues.
+//		private Class<? extends WebDriver> driverCls = null;
+		
+		@SuppressWarnings("unchecked")
+		private Class<? extends WebDriver> getDriverCls() {
+			return (Class<? extends WebDriver>) ConfigurationManager.getBundle().getProperty("DriverCLS");
+		}
+		
+		
+		private void setDriverCls(Class<? extends WebDriver> driverCls) {
+			ConfigurationManager.getBundle().setProperty("DriverCLS", driverCls);
+		}
+		
+		
 		private String browserName = name();
 
 		private Browsers(Capabilities desiredCapabilities) {
 			this.desiredCapabilities = new DesiredCapabilities(desiredCapabilities.asMap());
-			this.desiredCapabilities.setCapability(CapabilityType.SUPPORTS_JAVASCRIPT, true);
-			this.desiredCapabilities.setCapability(CapabilityType.TAKES_SCREENSHOT, true);
+//			this.desiredCapabilities.setCapability(CapabilityType.SUPPORTS_JAVASCRIPT, true);
+//			this.desiredCapabilities.setCapability(CapabilityType.TAKES_SCREENSHOT, true);
 			// this.desiredCapabilities.setCapability(CapabilityType.SUPPORTS_FINDING_BY_CSS,
 			// true);
 
@@ -310,10 +340,11 @@ public class UiDriverFactory implements DriverFactory<UiDriver> {
 		@SuppressWarnings("unchecked")
 		private Browsers(Capabilities desiredCapabilities, String drivercls) {
 			this(desiredCapabilities);
-			if (null == driverCls) {
+			
+			if (null == getDriverCls()) {
 				// not overridden by extra capability
 				try {
-					driverCls = (Class<? extends WebDriver>) Class.forName(drivercls);
+					setDriverCls((Class<? extends WebDriver>) Class.forName(drivercls));
 				} catch (Exception e) {
 					// throw new AutomationError(e);
 				}
@@ -323,9 +354,9 @@ public class UiDriverFactory implements DriverFactory<UiDriver> {
 
 		private Browsers(Capabilities desiredCapabilities, Class<? extends WebDriver> driver) {
 			this(desiredCapabilities);
-			if (null == driverCls) {
+			if (null == getDriverCls()) {
 				// not overridden by extra capability
-				driverCls = driver;
+				setDriverCls(driver);
 			}
 		}
 
@@ -339,10 +370,13 @@ public class UiDriverFactory implements DriverFactory<UiDriver> {
 					.fromJson(ApplicationProperties.DRIVER_ADDITIONAL_CAPABILITIES.getStringVal("{}"), Map.class);
 			capabilities.putAll(extraCapabilities);
 
+			
 			// individual capability property for all driver
 			Configuration config = ConfigurationManager.getBundle()
 					.subset(ApplicationProperties.DRIVER_CAPABILITY_PREFIX.key);
 			capabilities.putAll(new ConfigurationMap(config));
+			
+			
 			// #332 add default capabilities for standard driver
 			if (!name().equalsIgnoreCase(other.name())) {
 				String driverCapsKey = String.format(ApplicationProperties.DRIVER_ADDITIONAL_CAPABILITIES_FORMAT.key,
@@ -351,16 +385,31 @@ public class UiDriverFactory implements DriverFactory<UiDriver> {
 						Map.class);
 				capabilities.putAll(extraCapabilities);
 			}
+			
 			// capabilities specific to this driver
 			String driverCapsKey = String.format(ApplicationProperties.DRIVER_ADDITIONAL_CAPABILITIES_FORMAT.key,
 					browserName);
 			extraCapabilities = gson.fromJson(ConfigurationManager.getBundle().getString(driverCapsKey, "{}"),
 					Map.class);
 			capabilities.putAll(extraCapabilities);
+			
 			// individual capability property with driver name prefix
 			String driverCapKey = String.format(ApplicationProperties.DRIVER_CAPABILITY_PREFIX_FORMAT.key, browserName);
 			config = ConfigurationManager.getBundle().subset(driverCapKey);
-			capabilities.putAll(new ConfigurationMap(config));
+			
+			// ======== Patch for Appium 2.0 and Selenium 4 vendor specific prefix ========
+			
+			QuantumPatch quantumPatch = new QuantumPatch();
+			
+			Platform platform = desiredCapabilities.getPlatformName();
+			
+			if(Platform.ANDROID.equals(platform) || Platform.IOS.equals(platform)) {
+				quantumPatch.capabilitiesPatchAppium2(config, capabilities);
+			}else {
+				quantumPatch.capabilitiesPatchSelenium4(config, capabilities);
+			}
+			
+			// ======== Patch for Appium 2.0 vendor specific prefix completes ======== 
 
 			Object driverclass = capabilities.get(ApplicationProperties.CAPABILITY_NAME_DRIVER_CLASS.key);
 			if (null == driverclass) {// backward compatibility only
@@ -368,11 +417,12 @@ public class UiDriverFactory implements DriverFactory<UiDriver> {
 			}
 			if (null != driverclass) {
 				try {
-					driverCls = (Class<? extends WebDriver>) Class.forName(String.valueOf(driverclass));
+					setDriverCls((Class<? extends WebDriver>) Class.forName(String.valueOf(driverclass)));
 				} catch (Exception e) {
 					// throw new AutomationError(e);
 				}
 			}
+			
 			for (String key : capabilities.keySet()) {
 				Object value = capabilities.get(key);
 				if (value instanceof String) {
@@ -430,8 +480,8 @@ public class UiDriverFactory implements DriverFactory<UiDriver> {
 				 */
 
 //				Test the driver creation
-				setUpDriverExecutable(driverCls);
-				WebDriver driver = getDriverObj(driverCls, desiredCapabilities, urlstr);// driverCls.newInstance();
+				setUpDriverExecutable(getDriverCls());
+				WebDriver driver = getDriverObj(getDriverCls(), desiredCapabilities, urlstr);// driverCls.newInstance();
 				return new QAFExtendedWebDriver(driver, reporter);
 			} catch (Throwable e) {
 				onInitializationFailure(desiredCapabilities, e, listners);
@@ -457,7 +507,7 @@ public class UiDriverFactory implements DriverFactory<UiDriver> {
 			}
 		}
 
-		@SuppressWarnings({ "deprecation", "unused" })
+//		@SuppressWarnings({"unused" })
 		private QAFExtendedWebDriver proxyConnectForNormalDriver(String url, WebDriverCommandLogger reporter)
 				throws Exception {
 			logger.info("Proxy Driver Connect");
@@ -466,7 +516,10 @@ public class UiDriverFactory implements DriverFactory<UiDriver> {
 
 			String proxyHost = ConfigurationManager.getBundle().getString("ntlmProxyHost");
 			int proxyPort = Integer.parseInt(ConfigurationManager.getBundle().getString("ntlmProxyPort"));
-//			Need to know if there are any customers having Domain separately or can they mention it in username
+			
+//			TODO: Need to know if there are any customers having Domain separately or can they mention it in username
+			@SuppressWarnings("unused")
+			
 			String proxyUserDomain = ConfigurationManager.getBundle().getString("ntlmProxyDomain");
 			String proxyUser = ConfigurationManager.getBundle().getString("ntlmProxyUser");
 			String proxyPassword = ConfigurationManager.getBundle().getString("ntlmProxyPassword");
@@ -478,6 +531,7 @@ public class UiDriverFactory implements DriverFactory<UiDriver> {
 				throw new RuntimeException(e.getMessage(), e);
 			}
 			ClientConfig config;
+			
 			if (!proxyUser.isEmpty() || !proxyUser.equalsIgnoreCase("")) {
 				config = ClientConfig.defaultConfig().baseUrl(urls)
 						.proxy(new Proxy(Proxy.Type.HTTP, new InetSocketAddress(proxyHost, proxyPort)))
@@ -491,13 +545,14 @@ public class UiDriverFactory implements DriverFactory<UiDriver> {
 
 			}
 
-			Factory factory = (Factory) new NettyClientFactory().createClient(config);
+			HttpClient.Factory factory = new NettyClientFactory();
+		
 			/************** NEW end ****************/
 
 			beforeInitialize(desiredCapabilities, listners);
 
 			try {
-				WebDriver driver = getDriverProxyObj(driverCls, desiredCapabilities, urls, factory);// driverCls.newInstance();
+				WebDriver driver = getDriverProxyObj(getDriverCls(), desiredCapabilities, urls, factory);// driverCls.newInstance();
 				return new QAFExtendedWebDriver(driver, reporter);
 
 			} catch (Throwable e) {
@@ -507,13 +562,13 @@ public class UiDriverFactory implements DriverFactory<UiDriver> {
 		}
 
 		private static WebDriver getDriverProxyObj(Class<? extends WebDriver> of, Capabilities capabilities, URL url,
-				Factory factory) {
+				HttpClient.Factory factory) {
 			try {
 				// give it first try
 				// Constructor<? extends WebDriver> constructor =
 				// of.getConstructor(HttpCommandExecutor.class,
 				// Capabilities.class);
-				Constructor<? extends WebDriver> constructor = of.getConstructor(URL.class, Factory.class,
+				Constructor<? extends WebDriver> constructor = of.getConstructor(URL.class, HttpClient.Factory.class,
 						Capabilities.class);
 				return constructor.newInstance(url, factory, capabilities);
 			} catch (Exception ex) {
@@ -546,7 +601,7 @@ public class UiDriverFactory implements DriverFactory<UiDriver> {
 			}
 		}
 
-		@SuppressWarnings("deprecation")
+//		@SuppressWarnings("deprecation")
 		private QAFExtendedWebDriver proxyConnect(String url, WebDriverCommandLogger reporter) throws Exception {
 			logger.info("Proxy Driver Connect");
 			DesiredCapabilities desiredCapabilities = getDesiredCapabilities();
@@ -554,19 +609,24 @@ public class UiDriverFactory implements DriverFactory<UiDriver> {
 
 			String proxyHost = ConfigurationManager.getBundle().getString("ntlmProxyHost");
 			int proxyPort = Integer.parseInt(ConfigurationManager.getBundle().getString("ntlmProxyPort"));
-//			Need to know if there are any customers having Domain separately or can they mention it in username
+			
+//			TODO: Need to know if there are any customers having Domain separately or can they mention it in username
+			@SuppressWarnings("unused")
 			String proxyUserDomain = ConfigurationManager.getBundle().getString("ntlmProxyDomain");
-			String proxyUser = ConfigurationManager.getBundle().getString("ntlmProxyUser");
-			String proxyPassword = ConfigurationManager.getBundle().getString("ntlmProxyPassword");
+			
+			
+			String proxyUser = ConfigurationManager.getBundle().getString("ntlmProxyUser","");
+			String proxyPassword = ConfigurationManager.getBundle().getString("ntlmProxyPassword","");
 			URL urls;
 			try {
-				urls = new URL(ConfigurationManager.getBundle().getString("remote.server"));
+				urls = new URL(ConfigurationManager.getBundle().getString("remote.server",""));
 			} catch (MalformedURLException e) {
 				throw new RuntimeException(e.getMessage(), e);
 			}
 
 			ClientConfig config;
-			if (!proxyUser.isEmpty() || !proxyUser.equalsIgnoreCase("")) {
+//			if (!proxyUser.isEmpty() || !proxyUser.equalsIgnoreCase("")) {
+			if (!"".equals(proxyUser)) {
 				config = ClientConfig.defaultConfig().baseUrl(urls)
 						.proxy(new Proxy(Proxy.Type.HTTP, new InetSocketAddress(proxyHost, proxyPort)))
 						.readTimeout(Duration.ofSeconds(60)).authenticateAs(
@@ -578,7 +638,9 @@ public class UiDriverFactory implements DriverFactory<UiDriver> {
 						.readTimeout(Duration.ofSeconds(60));
 
 			}
-			Factory factory = (Factory) new NettyClientFactory().createClient(config);
+			
+			HttpClient.Factory factory = new NettyClientFactory();
+//					.createClient(config);
 
 			beforeInitialize(desiredCapabilities, listners);
 
@@ -593,6 +655,8 @@ public class UiDriverFactory implements DriverFactory<UiDriver> {
 			}
 		}
 
+		@SuppressWarnings("unused")
+		@Deprecated
 		private String getWorkstation() {
 			Map<String, String> env = System.getenv();
 			if (env.containsKey("COMPUTERNAME")) {
